# matcha-back

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: linter.yml
app/: config.py  main.py  requirements.txt
app/data/users/controllers/: __init__.py  users_controller.py
app/data/users/models/: __init__.py  user_model.py
app/health_check/: __init__.py  health_check_controller.py
app/managers/authentication_manager/: __init__.py  authentication_manager.py
app/managers/database_manager/: __init__.py  database_connection.py  database_field.py  model_interface.py
app/managers/swagger_manager/: __init__.py  doc_decorator.py  swagger_interface.py
app/setup/: __init__.py
app/utils/env_getter/: __init__.py  env_getter.py  errors.py  types.py
app/utils/logger/: __init__.py  color_formatter.py  logger.py
app/utils/marshmallow_utils/: __init__.py  base_schema.py
envs/dev/: docker-compose.yml
envs/dev/back/: .env.example  Dockerfile  back-start.sh
envs/prod/: docker-compose.yml
envs/prod/back/: .env.example  Dockerfile  back-start.sh
envs/shared/back/: back-start-shared.sh  setup_user_and_group.sh
script/: application_restart.sh
scripts/: application_restart.sh
