[project]
name = 'matcha-back'
version = '0.0.0'
description = 'le backend de matcha'
requires-python = '>=3.11'
dependencies = [
    'flask',
    'flask-cors',
    'requests',
    'uwsgi',
    'python-dotenv',
    'flask-apispec',
    'psycopg2-binary',
    'sqlalchemy',
    'Authlib',
    'flask-jwt-extended',
    'marshmallow',
    'pytest',
    'apispec',
    'apispec-webframeworks',
    'apispec[marshmallow]',
    'flask_swagger_ui'
]

[tool.setuptools]
py-modules = []


[tool.ruff]
# Set the maximum line length to 140.
line-length = 140

[tool.ruff.lint]
# See documentation: https://docs.astral.sh/ruff/rules/
extend-select = [
  "UP",
  "E501",
  "I",
  "B",
  "F",
  "E",
  "N",
  "A",
  "PL"
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
